<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="24dp"
    tools:context=".LuasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        >

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/blue_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:layout_marginHorizontal="24dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardMaxElevation="4dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <EditText
                    android:id="@+id/edt_panjang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="8dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/panjang"
                    android:textColorHint="@color/blue_primary"
                    android:importantForAutofill="no" />
                <EditText
                    android:id="@+id/edt_lebar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="8dp"
                    android:inputType="numberDecimal"
                    android:hint="@string/lebar"
                    android:textColorHint="@color/blue_primary"
                    android:importantForAutofill="no" />
                android:inputType="textPassword"/>
                <Button
                    android:id="@+id/btn_luas"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/blue_primary"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/hitung"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hasil"
                    android:textSize="42sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/tv_hasil_luas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_0"
                    android:textSize="42sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>